--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "next": "15.1.4",
     "next-intl": "^4.7.0",
+    "playwright": "^1.58.0",
+    "playwright-core": "^1.58.0",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
