--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
     "dotenv": "^17.2.3",
     "next": "15.1.4",
     "next-intl": "^4.7.0",
@@ -19,10 +20,10 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
-    "@supabase/supabase-js": "^2.47.10",
+    "@supabase/supabase-js": "^2.93.2",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.23",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
